[gd_scene load_steps=3 format=1]

[ext_resource path="res://Assets/Scripts/DevPanel.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/Units/spearman.png" type="Texture" id=2]



[node name="DevPanel" type="Control"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="unit_manager" type="Panel" parent="."]

anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -762.0
margin/top = -28.0
margin/right = -977.0
margin/bottom = -393.0

[node name="national_tabs" type="TabContainer" parent="unit_manager"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 3.0
margin/right = 211.0
margin/bottom = 361.0
tab_align = 1
tabs_visible = true

[node name="Poland" type="Tabs" parent="unit_manager/national_tabs"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="infantry" type="GridContainer" parent="unit_manager/national_tabs/Poland"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
columns = 1

[node name="spearman" type="Button" parent="unit_manager/national_tabs/Poland/infantry"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 44.0
margin/bottom = 38.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 2 )
flat = false

[node name="Denmark" type="Tabs" parent="unit_manager/national_tabs"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[connection signal="pressed" from="unit_manager/national_tabs/Poland/infantry/spearman" to="." method="_on_unit_select" binds= [ "spearman" ]]


